--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 Django==4.1
 django-crispy-forms==1.14.0
 django-mysql==4.7.1
+mysqlclient==2.1.1
 Pillow==9.2.0
 sqlparse==0.4.2
 tzdata==2022.2
